Added new correction

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -33,28 +33,8 @@
 
 //custom cursor
 
-.cursor {
-    width: 50px;
-    height: 50px;
-    pointer-events: none;
-    background-color: $white;
-    border-radius: 50%;
-    color: $black;
-    position: absolute;
-    transition: 450ms ease-out;
-    z-index: 10;
-    mix-blend-mode: exclusion;
-    animation: cursorName 500ms infinite alternate;
-
-    @include media("<=tablet") {
-        display: none;
-    }
-}
-
-.cursor2 {
-    width: 10px;
-    height: 10px;
-    transition: 200ms ease-out;
+a.no-cursor {
+    cursor: none;
 }
 
 .fade-in-section {
