--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,7 +32,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-  cursor: none;
+  cursor: none!important;
 }
 
 .sidebar {
@@ -94,7 +94,6 @@ body {
   color: #000!important;
 }
 
-
 .fadeIn {
   opacity: 0;
   transform: translateY(20px);
@@ -104,4 +103,10 @@ body {
 .fadeIn.fadeOnScroll {
   opacity: 1;
   transform: translateY(0);
+}
+
+.text-about {
+  font-size: 3rem;
+  line-height: 3.8rem;
+
 }
